# firewood_bank

./: .gitignore  CMakeLists.txt  LICENSE  LOAD_SAMPLE_DATA_INSTRUCTIONS.txt  README.md  check_sample_data.ps1  login_screen_layout.txt
docs/: BUILD_AND_AUDIT_COMPLETE.md  CODE_AUDIT_REPORT.md  COMPLETE_SESSION_SUMMARY.md  CURRENT_SESSION_PROGRESS.md  DELIVERY_TRACKING_SYSTEM.md  FINAL_FEATURE_LIST.md  FINAL_POLISH_COMPLETE.md  GUI_POLISH_SUMMARY.md  IMPORT_EXPORT_GUIDE.md  IMPROVEMENT_CHECKLIST.md  IMPROVEMENT_RECOMMENDATIONS.md  INVENTORY_SYSTEM.md  NEW_SESSION_PROMPT.md  PROFILE_SYSTEM.md  PROGRAM_INDEX.md  PROJECT_OUTLINE.md  README.md  SAMPLE_DATA.sql  SAMPLE_DATA_CONTENTS.md  SAMPLE_DATA_TROUBLESHOOTING.md  SECURITY_OBFUSCATION_PLAN.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  TODO.md  USER_MANAGEMENT.md  VISUAL_ENHANCEMENTS_SUMMARY.md  VOLUNTEER_FEATURES.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: Authorization.cpp  Authorization.h  CMakeLists.txt  core.cpp  core.h
src/db/: CMakeLists.txt  database.cpp  database.h
src/ui/: BookkeepingWidget.cpp  BookkeepingWidget.h  CMakeLists.txt  ClientDialog.cpp  ClientDialog.h  DashboardWidget.cpp  DashboardWidget.h  DeliveryLogDialog.cpp  DeliveryLogDialog.h  EmployeeDirectoryDialog.cpp  EmployeeDirectoryDialog.h  EquipmentMaintenanceDialog.cpp  EquipmentMaintenanceDialog.h  ExpenseDialog.cpp  ExpenseDialog.h  IncomeDialog.cpp  IncomeDialog.h  InventoryDialog.cpp  InventoryDialog.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.cpp.backup  MainWindow.h  MyProfileDialog.cpp  MyProfileDialog.h  ProfileChangeRequestDialog.cpp  ProfileChangeRequestDialog.h  StyleSheet.h  UserManagementDialog.cpp  UserManagementDialog.h  VolunteerProfileWidget.cpp  VolunteerProfileWidget.h  WorkOrderDialog.cpp  WorkOrderDialog.h  WorkOrderDialogb.cpp
